--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -3,6 +3,23 @@
 
     @mixin clearfix;
 
+    &--gutters {
+        margin-right: -65px;
+    }
+
+    &--gutters-large {
+        margin-right: -100px;
+    }
+
+    &--gutters > div{
+        padding-right: 65px;
+    }
+
+
+    &--gutters-large > div {
+        padding-right: 100px;
+    }
+
     &__b-margin-until-medium {
         margin-bottom: 1rem;  
       }
@@ -21,6 +38,11 @@
         &__medium-4--larger{
             width: 37%;
         }
+
+        &__medium-6 {
+            float: left;
+            width: 50%;
+        }
     
         &__medium-8 {
             float: left;
@@ -35,13 +57,7 @@
     }
 
 
-    &--gutters {
-        margin-right: -65px;
-    }
-
-    &--gutters > div{
-        padding-right: 65px;
-    }
+   
 
 
 
