Added CSS to first part of testimonials

--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -23,7 +23,13 @@ text-align: center;
             margin-left: 0;
             display: inline;
             margin-bottom: 0;
+            position: relative;
+            top: 8px;
         }
+    }
+
+    &--blue {
+        color: $mainBlue;
     }
 
 }
