--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -9,4 +9,10 @@ padding: 1.2rem 0;
     background-color: $mainBlue;
     color: #FFF;
  }
+
+ &--testimonials {
+    background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
+    background-size: cover;
+ }
 }
+
