--- a/app/assets/styles/modules/_testimonial.css
+++ b/app/assets/styles/modules/_testimonial.css
@@ -1,7 +1,17 @@
 .testimonial {
     background-color: rgba(255, 255, 255, .8);
-    padding: 0 1.8125rem 1px 1.8125rem;
+    padding: 0 18px 1px 18px;
+    margin-bottom: 98px;
 
+    @mixin atLarge {
+        padding: 0 1.8125rem 1px 1.8125rem;
+        margin-bottom: 0;
+    }
+
+    &--last {
+        margin-bottom: 0;
+    }
+    
     &__photo {
         border-radius: 50%;
         border: 6px solid rgba(255, 255, 255, .8);
