added first JS code

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -33,7 +33,13 @@
         @mixin atMedium {
             display: block;
         }
+
+        &--is-visible {
+            display: block;
+        }
     }
+
+
 
     &__menu-icon {
         width: 20px;
