--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,7 +1,16 @@
 .primary-nav {
    
+   padding-top: 10px;
+
+   @mixin atMedium {
+      padding-top: 0;
+   }
+
    &--pull-right {
-    float: right; 
+
+      @mixin atMedium {
+      float: right;
+    } 
 
    }
 
@@ -13,16 +22,37 @@
 
    li {
     list-style: none;
-    float: left;
-    padding-right: 20px;
+    padding-right: 7px;
+    display: inline-block;
+
+    @mixin atMedium {
+      float: left;
+      display: block;
+      padding-right: 20px;
+    }
     
+   }
+
+   li:last-child {
+      padding-right: 0;
+
+      @mixin atMedium {
+         padding-right: 20px;
+      }
    }
 
    a {
     text-decoration: none;
     color: #FFF;
     font-weight: 300;
-    padding: 12px 0;
+    padding: 5px 8px;
     display: block;
+    font-size: .8rem;
+    background-color: rgba($mainBlue, .6);
+
+    @mixin atMedium {
+      padding: 12px 0;
+      background-color: transparent;
+    }
    }
 }
